--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <div id="app"></div>
-    <script src="bundle.js"></script>
+    <script src="/public/main.js"></script>
 </body>
 </html>
